--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "fastapi>=0.112.0",
     "uvicorn>=0.30.6",
+    "ruff>=0.5.7",
 ]
 readme = "README.md"
 requires-python = ">= 3.11.3"
