--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
   web:
     build: .
     command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - type: bind
+        source: app/src
+        target: /app/src
     ports:
       - 8000:8000
     depends_on:
