--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "fastapi>=0.112.0",
     "uvicorn>=0.30.6",
     "ruff>=0.5.7",
+    "sqlalchemy>=2.0.32",
+    "alembic>=1.13.2",
+    "psycopg2-binary>=2.9.9",
 ]
 readme = "README.md"
 requires-python = ">= 3.11.3"
