--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  web:
+  api:
     build: .
     command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
     volumes:
@@ -12,6 +12,8 @@ services:
       - 8000:8000
     depends_on:
       - db
+    networks:
+      - pgnet
 
   db:
     image: postgres:16
@@ -21,6 +23,12 @@ services:
       POSTGRES_DB: app_db
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - pgnet
 
 volumes:
   pgdata:
+
+networks:
+  pgnet:
+    external: false
